--- a/.github/workflows/gradlebuild.yml
+++ b/.github/workflows/gradlebuild.yml
@@ -15,7 +15,9 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
+          distribution: "temurin"
           java-version: "17"
+
       #Run Tests
       - name: Run Tests
         run: ./gradlew check
