--- a/.github/workflows/gradlebuild.yml
+++ b/.github/workflows/gradlebuild.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "17"
+          cache: "gradle"
+      - run: ./gradlew build --no-daemon
 
       #Run Tests
       - name: Run Tests
