--- a/.github/workflows/gradlebuild.yml
+++ b/.github/workflows/gradlebuild.yml
@@ -50,4 +50,4 @@ jobs:
           #Set artifact name
           name: build-artifact
           #From this path
-          path: target/testspringboot-0.0.1-SNAPSHOT.jar
+          path: build/libs/testspringboot-0.0.1-SNAPSHOT.jar
