--- a/.github/workflows/gradlebuild.yml
+++ b/.github/workflows/gradlebuild.yml
@@ -5,7 +5,7 @@ jobs:
   #Test's job
   tests:
     name: Unit tests
-    #Run on Ubuntu using the latest version
+    #Run on Ubuntu os using the latest version
     runs-on: ubuntu-latest
     #Job's steps
     steps:
