--- a/.github/workflows/gradlebuild.yml
+++ b/.github/workflows/gradlebuild.yml
@@ -17,9 +17,15 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "17"
-          cache: "gradle"
-      - run: ./gradlew build --no-daemon
-
+      #Cache Gradle
+      - uses: actions/cache@v3
+        with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
       #Run Tests
       - name: Run Tests
         run: ./gradlew check
