--- a/.github/workflows/gradlebuild.yml
+++ b/.github/workflows/gradlebuild.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           #Set artifact name
           name: build-artifact
-          #From this path
+          #From this paths
           path: build/libs/testspringboot-0.0.1-SNAPSHOT.jar
   #Deploy's job
   deploy:
