--- a/.github/workflows/gradlebuild.yml
+++ b/.github/workflows/gradlebuild.yml
@@ -72,3 +72,10 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build-artifact
+      #Deploy to Heroku
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "test-spring-boot-cicd" #Must be unique in Heroku
+          heroku_email: "shashank.indukuri05@gmail.com"
